--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 800px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
       background-color: #f9f9f9;
@@ -31,6 +31,10 @@
     a:hover {
       text-decoration: underline;
     }
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
   </style>
 </head>
 <body>
@@ -38,51 +42,55 @@
   <p><strong>Assistant Professor, Instructional Design and Technology</strong><br>
   University of North Dakota<br>
   📧 tugba.boz@und.edu<br>
-  🌐 <a href="https://tugbaboz.github.io">yourusername.github.io</a></p>
+  🌐 <a href="https://tugbaboz.github.io">tugbaboz.github.io</a></p>
 
   <hr>
 
   <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li>Ph.D., Instructional Design – Big State University, 2020</li>
-      <li>M.A., Education – Other University, 2015</li>
-    </ul>
+    <h2>Curriculum Vitae</h2>
+    <pre>
+PUBLICATIONS
+
+Journals
+1. Boz, T., Hammack, R., Scherer, S., Lux, N., & Gannon, P. (In Print). Sustaining engineering education for rural contexts: Implications from a multi-year study. Theory and Practice in Rural Education.
+2. Park, H., Boz, T., Sawyer, A., & Willingham, C. (Revised and Resubmitted). Exploring robot programming in a geometry content course: Learning opportunities for prospective elementary teachers. Contemporary Issues in Technology and Teacher Education.
+3.	Boz, T., Lee, M., Macias, M., Summers, R., Zaman, M., Inouye, M., Robinson, J., & Hammack, R. (Under Review). Large-scale online science and engineering professional learning for rural elementary teachers. Research in Science Education
+4.	Hammack, R., Robinson, J., Gist, J., Lee, M., & Boz, T. (Under Review). Is this a science lesson? Is this an engineering lesson?: Understanding how elementary teachers characterize science and engineering and its connection to practice. Journal of Science Teacher Education.
+5.	Boz, T., Smith, N., Hammack, R., Davis, H., & Cornish, J. (2025). Middle school students' experiences with place-based STEM outreach. Research in Science Education. https://doi.org/10.1007/s11165-025-10245-1 
+6.	Davis, H., Davey, B., Cornish, J., Smith, N., Boz, T., & Hammack, R. (2025). Disease ecology summer camp classes: Lessons learned working with undergraduates to engage underserved youth. Journal of STEM Outreach, 8(1), 1-10. 
+7.	Boz, T., Hammack, R., Lux, N., & Gannon, P. (2024). Technology-rich engineering experiences in Indigenous and rural schools. International Journal of Education in Mathematics, Science, and Technology (IJEMST), 12(4), 1090-1108. https://doi.org/10.46328/ijemst.4129  
+8.	Inouye, M., Macias, M., Boz, T., Lee, M. J., Hammack, R., & Iveland, A. (2024). Defining rural: Rural teachers’ perspectives and experiences. Education Sciences, 14(6). https://doi.org/10.3390/educsci14060645  
+9.	Hammack, R., Pavlovic, C., Yeter, I., & Boz, T. (2024). Exploring pre-service elementary teachers’ science and engineering teaching efficacy beliefs and outcome expectancy. International Journal of STEM Education. https://doi.org/10.1186/s40594-024-00464-9  
+10.	Boz, T., & Allexsaht-Snider, M. (2023). Implementing and sustaining coding and robotics practices in rural elementary schools: An activity theory perspective. Journal of Research on Educational Technology. https://doi.org/10.1080/15391523.2023.2221870
+11.	Boz, T. (2023). Teacher professional development for STEM integration in elementary/primary schools: A systematic review. International Electronic Journal of Elementary Education, 15(5), 371–382. 
+12.	Boz, T., Hammack, R., Lux, N., & Gannon, P. (2023). Empowering elementary students with community-based engineering: A teacher's experience in a rural school district. Education Sciences, 13(5), 434. https://doi.org/10.3390/educsci13050434  
+13.	Park, H., Boz, T., Sawyer, A., & Willingham, C. (2023). Learning polygons through robotics and argumentation. Mathematics Teacher: Learning and Teaching Pre-K-12, 116(5), 392–398. https://doi.org/10.5951/MTLT.2021.0313  
+14.	Kim, C., Gleasman, C., Boz, T., Park, H., & Foutz, T. (2022) Learning to teach coding through argumentation. Computers & Education Open. https://doi.org/10.1016/j.caeo.2022.100107  
+15.	Boz, T., & Allexsaht-Snider, M. (2021). How do elementary school teachers learn coding and robotics? A case study of mediations and conflicts. Education and Information Technologies. https://doi.org/10.1007/s10639-021-10736-4  
+16.	Boz, T. (2020). İlkokul öğrencileri için robotik ve kodlama eğitimi [Robotics and Coding for Primary School Students]. Eğitim Bilimleri ve Teknolojileri Uygulama ve Araştırma Merkezi, 2, 14-16. 
+17.	Boz, T., & Yıldırım, A. (2014). 4+4+4 eğitim sisteminde birinci sınıf öğretmenlerin karşılaştığı zorluklar [Difficulties teachers experience in 4+4+4 education system at first grade level]. Baskent University Journal of Education, 1(2), 54-65. https://buje.baskent.edu.tr/index.php/buje/article/view/37  
+
+Conference Proceedings
+
+1.	Summers, R., Hammack, R., Robinson, J., Inouye, M., Lee, M., Boz, T., Macias, M., & Iveland, A. (2025, accepted). Examining changes in elementary teachers’ engineering self-efficacy across a year-long professional learning program. Annual Meeting of American Society for Engineering Education (ASEE), Montreal, CA.
+2.	Hammack, R., Robinson, J., Lee, M., Gist, J. R., & Boz, T. (2025, accepted). One teacher’s approach to supporting multilingual learners through community-connected culturally relevant engineering design (fundamental, diversity). Annual Meeting of American Society for Engineering Education (ASEE), Montreal, CA.
+3.	Boz, T., Hartikainen, V., Fagerlund, J., Ahlström, E., Nousiainen, T., & Näykki, P. (2024). Teaching programming to pre-service teachers through pair programming. Proceedings of the Annual Meeting of International Society of the Learning Sciences (ISLS), Buffalo, NY. https://repository.isls.org/bitstream/1/10623/1/ICLS2024_1075-1078.pdf 
+4.	Hammack, R., Boz, T., Lux, N., & Gannon, P. (2024). Impact of community-based engineering lessons on rural and indigenous elementary students. Proceedings of the 2024 ASEE Annual Conference & Exposition, Portland, OR.
+5.	Hammack, R., Robinson, J., Boz, T., Lee, M. Galisky, J., Macias, M., Inouye, M., Iveland, A., Ringstaff, C., & Summers, R. (2024). Supporting elementary engineering instruction through online professional learning and modest supports. Proceedings of the 2024 ASEE Annual Conference & Exposition, Portland, OR. https://peer.asee.org/board-298-supporting-elementary-engineering-instruction-in-rural-contexts-through-online-professional-learning-and-modest-supports  
+6.	Boz, T., Smith, N., Hammack, R., Davis, H., & Cornish, J. (2024). Engaging middle school students with disease ecology in place-based STEM outreach. Proceedings of IEEE Integrated STEM Education Conference, Princeton, NJ. https://ieeexplore.ieee.org/document/10665097 
+7.	Hammack, R.J.; Lux, N.; Gannon, P.; Hacker, D.; LaMeres, B.J.; Wiehe, B.; & Boz, T. (2023). Connecting classroom curriculum to local contexts to enhance engineering awareness in elementary youth. Proceedings of the 2024 ASEE Annual Conference & Exposition, Baltimore, MD. https://peer.asee.org/42685 
+8.	Park, H., Boz, T., Kim, C., & Foutz, T. (2022). Design features of elementary teachers’ mathematics lesson plans integrated with argumentation and robotics. 44th North American Chapter of the International Group for the Psychology of Mathematics Education (PME-NA). Nashville, TN. http://www.pmena.org/pmenaproceedings/PMENA%2044%202022%20Proceedings.pdf  
+9.	Boz, T., & Allexsaht-Snider, M. (2022). Supporting elementary school teachers in their learning of programming and robotics: A case study. Proceedings of the Annual Meeting of International Society of the Learning Sciences (ISLS), Virtual. https://repository.isls.org//handle/1/8715 
+10.	Foutz, T., Kim, C. M., Boz, T., & Gleasman, C. (2019). Work in progress: Teaching coding to elementary students - the use of collective argumentation. Proceedings of the 2024 ASEE Annual Conference & Exposition, Tampa, FL. https://peer.asee.org/33653 (doi: 10.18260/1-2--33653)
+
+GRANTS
+2024-2026 Project Personnel-Research (Sub-award), NIH SEPA My home, my health: Place-based health resources for rural educators (2021-2026) ($1,246,090)
+2025-2026 Project Personnel-Research, NSF DRL Investigating how combining intensive professional development and modest support affects rural, elementary teachers’ science and engineering practice (2022-2026) ($2,955,381)
+2022 University of Jyvaskyla Research Funding, Primary school teachers’ collaborative learning processes of programming (€9,000)
+2022-2022 James Madison University (USA) Internal Funding Grant for Research, Learning Mathematics through Robotics with Argumentation ($2,260)
+
+</pre>
   </div>
 
-  <div class="section">
-    <h2>Academic Appointments</h2>
-    <ul>
-      <li>2021–Present: Assistant Professor, University of North Dakota</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Publications</h2>
-    <ol>
-      <li>Boz, T. et al. (2024). "Title of Article." <em>Journal Name</em>.</li>
-    </ol>
-  </div>
-
-  <div class="section">
-    <h2>Teaching</h2>
-    <ul>
-      <li>IDT 101: Foundations of Instructional Technology</li>
-      <li>IDT 202: AI in Education</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Service</h2>
-    <ul>
-      <li>Reviewer, SIGCSE 2024</li>
-      <li>Member, UND AI Education Committee</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Contact</h2>
-    <p>Email: tugba.boz@und.edu<br>
-  </div>
 </body>
 </html>
