--- a/index.html
+++ b/index.html
@@ -83,8 +83,18 @@
   <section id="education">
     <h2>Education</h2>
     <ul>
-      <li>Ph.D., Instructional Design – Big State University, 2020</li>
-      <li>M.A., Education – Other University, 2015</li>
+      <li><strong>Ph.D. in Educational Theory and Practice</strong>, University of Georgia, GA, USA. 12/2020.<br>
+        <em>Dissertation:</em> Activity theory as a lens: Understanding elementary school teachers’ learning of coding and robotics in the context of administrators’ corresponding decision-making processes.
+      </li>
+    </ul>
+
+    <h3>Academic Appointments</h3>
+    <ul>
+      <li><strong>2025–Present:</strong> Assistant Professor, Instructional Design and Technology, University of North Dakota</li>
+      <li><strong>2023–2024:</strong> Postdoctoral Scholar, Curriculum and Instruction, Purdue University & Montana State University</li>
+      <li><strong>2022:</strong> Visiting Research Fellow, JYU Unit for Digital Learning, University of Jyväskylä, Finland</li>
+      <li><strong>2021–2022:</strong> Assistant Professor, Digital Learning, Dublin City University, Dublin, Ireland</li>
+      <li><strong>2018–2021:</strong> Graduate Research Assistant & Consultant, College of Education & College of Engineering, University of Georgia, GA</li>
     </ul>
   </section>
 
@@ -92,51 +102,33 @@
     <h2>Publications</h2>
     <h3>Journals</h3>
     <ol>
-      <li>Boz, T., Hammack, R., Scherer, S., Lux, N., & Gannon, P. (In Print). Sustaining engineering education for rural contexts: Implications from a multi-year study. <em>Theory and Practice in Rural Education</em>.</li>
-      <li>Park, H., Boz, T., Sawyer, A., & Willingham, C. (Revised and Resubmitted). Exploring robot programming in a geometry content course: Learning opportunities for prospective elementary teachers. <em>Contemporary Issues in Technology and Teacher Education</em>.</li>
-      <li>Boz, T., Lee, M., Macias, M., Summers, R., Zaman, M., Inouye, M., Robinson, J., & Hammack, R. (Under Review). Large-scale online science and engineering professional learning for rural elementary teachers. <em>Research in Science Education</em>.</li>
-      <!-- Add remaining journal entries here in <li>...</li> -->
+      <li>Boz, T., Hammack, R., Scherer, S., Lux, N., & Gannon, P. (In Print). Sustaining engineering education for rural contexts: Implications from a multi-year study. <em>Theory and Practice in Rural Education.</em></li>
+      <li>Park, H., Boz, T., Sawyer, A., & Willingham, C. (Revised and Resubmitted). Exploring robot programming in a geometry content course: Learning opportunities for prospective elementary teachers. <em>Contemporary Issues in Technology and Teacher Education.</em></li>
+      <li>Boz, T., Lee, M., Macias, M., Summers, R., Zaman, M., Inouye, M., Robinson, J., & Hammack, R. (Under Review). Large-scale online science and engineering professional learning for rural elementary teachers. <em>Research in Science Education</em></li>
+      <li>Hammack, R., Robinson, J., Gist, J., Lee, M., & Boz, T. (Under Review). Is this a science lesson? Is this an engineering lesson?: Understanding how elementary teachers characterize science and engineering and its connection to practice. <em>Journal of Science Teacher Education.</em></li>
+      <li>Boz, T., Smith, N., Hammack, R., Davis, H., & Cornish, J. (2025). Middle school students' experiences with place-based STEM outreach. <em>Research in Science Education.</em> <a href="https://doi.org/10.1007/s11165-025-10245-1">https://doi.org/10.1007/s11165-025-10245-1</a></li>
+      <li>Davis, H., Davey, B., Cornish, J., Smith, N., Boz, T., & Hammack, R. (2025). Disease ecology summer camp classes: Lessons learned working with undergraduates to engage underserved youth. <em>Journal of STEM Outreach, 8(1), 1-10.</em></li>
+      <li>Boz, T., Hammack, R., Lux, N., & Gannon, P. (2024). Technology-rich engineering experiences in Indigenous and rural schools. <em>International Journal of Education in Mathematics, Science, and Technology (IJEMST), 12(4), 1090-1108.</em> <a href="https://doi.org/10.46328/ijemst.4129">https://doi.org/10.46328/ijemst.4129</a></li>
+      <li>Inouye, M., Macias, M., Boz, T., Lee, M. J., Hammack, R., & Iveland, A. (2024). Defining rural: Rural teachers’ perspectives and experiences. <em>Education Sciences, 14(6).</em> <a href="https://doi.org/10.3390/educsci14060645">https://doi.org/10.3390/educsci14060645</a></li>
+      <li>Hammack, R., Pavlovic, C., Yeter, I., & Boz, T. (2024). Exploring pre-service elementary teachers’ science and engineering teaching efficacy beliefs and outcome expectancy. <em>International Journal of STEM Education.</em> <a href="https://doi.org/10.1186/s40594-024-00464-9">https://doi.org/10.1186/s40594-024-00464-9</a></li>
+      <li>Boz, T., & Allexsaht-Snider, M. (2023). Implementing and sustaining coding and robotics practices in rural elementary schools: An activity theory perspective. <em>Journal of Research on Educational Technology.</em> <a href="https://doi.org/10.1080/15391523.2023.2221870">https://doi.org/10.1080/15391523.2023.2221870</a></li>
+      <li>Boz, T. (2023). Teacher professional development for STEM integration in elementary/primary schools: A systematic review. <em>International Electronic Journal of Elementary Education, 15(5), 371–382.</em></li>
+      <li>Boz, T., Hammack, R., Lux, N., & Gannon, P. (2023). Empowering elementary students with community-based engineering: A teacher's experience in a rural school district. <em>Education Sciences, 13(5), 434.</em> <a href="https://doi.org/10.3390/educsci13050434">https://doi.org/10.3390/educsci13050434</a></li>
+      <li>Park, H., Boz, T., Sawyer, A., & Willingham, C. (2023). Learning polygons through robotics and argumentation. <em>Mathematics Teacher: Learning and Teaching Pre-K-12, 116(5), 392–398.</em> <a href="https://doi.org/10.5951/MTLT.2021.0313">https://doi.org/10.5951/MTLT.2021.0313</a></li>
+      <li>Kim, C., Gleasman, C., Boz, T., Park, H., & Foutz, T. (2022). Learning to teach coding through argumentation. <em>Computers & Education Open.</em> <a href="https://doi.org/10.1016/j.caeo.2022.100107">https://doi.org/10.1016/j.caeo.2022.100107</a></li>
+      <li>Boz, T., & Allexsaht-Snider, M. (2021). How do elementary school teachers learn coding and robotics? A case study of mediations and conflicts. <em>Education and Information Technologies.</em> <a href="https://doi.org/10.1007/s10639-021-10736-4">https://doi.org/10.1007/s10639-021-10736-4</a></li>
+      <li>Boz, T. (2020). İlkokul öğrencileri için robotik ve kodlama eğitimi [Robotics and Coding for Primary School Students]. <em>Eğitim Bilimleri ve Teknolojileri Uygulama ve Araştırma Merkezi, 2, 14-16.</em></li>
+      <li>Boz, T., & Yıldırım, A. (2014). 4+4+4 eğitim sisteminde birinci sınıf öğretmenlerin karşılaştığı zorluklar [Difficulties teachers experience in 4+4+4 education system at first grade level]. <em>Baskent University Journal of Education, 1(2), 54-65.</em> <a href="https://buje.baskent.edu.tr/index.php/buje/article/view/37">https://buje.baskent.edu.tr/index.php/buje/article/view/37</a></li>
     </ol>
   </section>
 
-  <section id="presentations">
-    <h3>Conference Proceedings</h3>
-    <ol>
-      <li>Summers, R., Hammack, R., Robinson, J., Inouye, M., Lee, M., Boz, T., Macias, M., & Iveland, A. (2025, accepted). Examining changes in elementary teachers’ engineering self-efficacy across a year-long professional learning program. <em>ASEE, Montreal, CA</em>.</li>
-      <!-- Add remaining proceedings entries here in <li>...</li> -->
-    </ol>
-  </section>
 
   <section id="grants">
     <h2>Grants</h2>
     <ul>
       <li>2025–2026, NIH SEPA: My Home, My Health — $1,246,090 (Sub-award)</li>
-      <li>2025–2026, NSF DRL: Effects of PD on rural teachers — $2,955,381</li>
-      <!-- Add remaining grants -->
-    </ul>
-  </section>
-
-  <section>
-    <h2>Conference Presentations</h2>
-    <ol>
-      <li>Summers, R., Hammack, R., Robinson, J., Inouye, M., Lee, M., Boz, T., Macias, M., & Iveland, A. (2025, accepted)...</li>
-      <!-- Add remaining presentations -->
-    </ol>
-  </section>
-
-  <section id="courses">
-    <h2>Courses Taught</h2>
-    <ul>
-      <li>IDT 101: Foundations of Instructional Technology</li>
-      <li>IDT 202: AI in Education</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Student Advisees</h2>
-    <ul>
-      <li><strong>MSc:</strong> Francesca De Sanctis – VR in language education (Finland)</li>
-      <li><strong>PhD:</strong> Chris Pavlovic – Scientific literacy and trauma (Montana State University)</li>
+      <li>2025–2026, NSF DRK-12: Investigating how combining intensive professional development and modest support affects rural, elementary teachers’ science and engineering practice  — $2,955,381</li>
+      <li> 2022,University of Jyvaskyla Research Funding, Primary school teachers’ collaborative learning processes of programming - €9,000 </li>
     </ul>
   </section>
 
