--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </li>
     </ul>
 
-    <h3>Academic Appointments</h3>
+    <h3>Professional Experience</h3>
     <ul>
       <li><strong>2025–Present:</strong> Assistant Professor, Instructional Design and Technology, University of North Dakota</li>
       <li><strong>2023–2024:</strong> Postdoctoral Scholar, Curriculum and Instruction, Purdue University & Montana State University</li>
@@ -96,11 +96,11 @@
       <li><strong>2021–2022:</strong> Assistant Professor, Digital Learning, Dublin City University, Dublin, Ireland</li>
       <li><strong>2018–2021:</strong> Graduate Research Assistant & Consultant, College of Education & College of Engineering, University of Georgia, GA</li>
     </ul>
-  </section>
+
 
   <section id="publications">
     <h2>Publications</h2>
-    <h3>Journals</h3>
+    <h3>Journals </h3>
     <ol>
       <li>Boz, T., Hammack, R., Scherer, S., Lux, N., & Gannon, P. (In Print). Sustaining engineering education for rural contexts: Implications from a multi-year study. <em>Theory and Practice in Rural Education.</em></li>
       <li>Park, H., Boz, T., Sawyer, A., & Willingham, C. (Revised and Resubmitted). Exploring robot programming in a geometry content course: Learning opportunities for prospective elementary teachers. <em>Contemporary Issues in Technology and Teacher Education.</em></li>
@@ -122,7 +122,21 @@
     </ol>
   </section>
 
-
+    <h3>Conference Proceedings</h3>
+    <ol>
+      <li>Summers, R., Hammack, R., Robinson, J., Inouye, M., Lee, M., Boz, T., Macias, M., & Iveland, A. (2025, accepted). Examining changes in elementary teachers’ engineering self-efficacy across a year-long professional learning program. Annual Meeting of American Society for Engineering Education (ASEE), Montreal, CA.</li>
+      <li>Hammack, R., Robinson, J., Lee, M., Gist, J. R., & Boz, T. (2025, accepted). One teacher’s approach to supporting multilingual learners through community-connected culturally relevant engineering design (fundamental, diversity). Annual Meeting of American Society for Engineering Education (ASEE), Montreal, CA.</li>
+      <li>Boz, T., Hartikainen, V., Fagerlund, J., Ahlström, E., Nousiainen, T., & Näykki, P. (2024). Teaching programming to pre-service teachers through pair programming. Proceedings of the Annual Meeting of International Society of the Learning Sciences (ISLS), Buffalo, NY. <a href="https://repository.isls.org/bitstream/1/10623/1/ICLS2024_1075-1078.pdf">https://repository.isls.org/bitstream/1/10623/1/ICLS2024_1075-1078.pdf</a></li>
+      <li>Hammack, R., Boz, T., Lux, N., & Gannon, P. (2024). Impact of community-based engineering lessons on rural and indigenous elementary students. Proceedings of the 2024 ASEE Annual Conference & Exposition, Portland, OR.</li>
+      <li>Hammack, R., Robinson, J., Boz, T., Lee, M., Galisky, J., Macias, M., Inouye, M., Iveland, A., Ringstaff, C., & Summers, R. (2024). Supporting elementary engineering instruction through online professional learning and modest supports. Proceedings of the 2024 ASEE Annual Conference & Exposition, Portland, OR. <a href="https://peer.asee.org/board-298-supporting-elementary-engineering-instruction-in-rural-contexts-through-online-professional-learning-and-modest-supports">https://peer.asee.org/board-298-supporting-elementary-engineering-instruction-in-rural-contexts-through-online-professional-learning-and-modest-supports</a></li>
+      <li>Boz, T., Smith, N., Hammack, R., Davis, H., & Cornish, J. (2024). Engaging middle school students with disease ecology in place-based STEM outreach. Proceedings of IEEE Integrated STEM Education Conference, Princeton, NJ. <a href="https://ieeexplore.ieee.org/document/10665097">https://ieeexplore.ieee.org/document/10665097</a></li>
+      <li>Hammack, R.J., Lux, N., Gannon, P., Hacker, D., LaMeres, B.J., Wiehe, B., & Boz, T. (2023). Connecting classroom curriculum to local contexts to enhance engineering awareness in elementary youth. Proceedings of the 2024 ASEE Annual Conference & Exposition, Baltimore, MD. <a href="https://peer.asee.org/42685">https://peer.asee.org/42685</a></li>
+      <li>Park, H., Boz, T., Kim, C., & Foutz, T. (2022). Design features of elementary teachers’ mathematics lesson plans integrated with argumentation and robotics. 44th North American Chapter of the International Group for the Psychology of Mathematics Education (PME-NA). Nashville, TN. <a href="http://www.pmena.org/pmenaproceedings/PMENA%2044%202022%20Proceedings.pdf">http://www.pmena.org/pmenaproceedings/PMENA%2044%202022%20Proceedings.pdf</a></li>
+      <li>Boz, T., & Allexsaht-Snider, M. (2022). Supporting elementary school teachers in their learning of programming and robotics: A case study. Proceedings of the Annual Meeting of International Society of the Learning Sciences (ISLS), Virtual. <a href="https://repository.isls.org//handle/1/8715">https://repository.isls.org//handle/1/8715</a></li>
+      <li>Foutz, T., Kim, C. M., Boz, T., & Gleasman, C. (2019). Work in progress: Teaching coding to elementary students - the use of collective argumentation. Proceedings of the 2024 ASEE Annual Conference & Exposition, Tampa, FL. <a href="https://peer.asee.org/33653">https://peer.asee.org/33653</a> (doi: 10.18260/1-2--33653)</li>
+    </ol>
+  </section>
+  
   <section id="grants">
     <h2>Grants</h2>
     <ul>
