--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       padding: 0 20px;
       background-color: #f9f9f9;
       color: #333;
-      padding-right: 220px;
+      padding-left: 220px;
     }
     h1, h2, h3, h4 {
       color: #003366;
@@ -44,7 +44,7 @@
       margin-bottom: 30px;
       border-radius: 6px;
       position: fixed;
-      right: 0;
+      left: 0;
       top: 100px;
       width: 200px;
     }
@@ -89,7 +89,6 @@
       <li><a href="#publications">Publications</a></li>
       <li><a href="#presentations">Presentations</a></li>
       <li><a href="#grants">Grants</a></li>
-      <li><a href="#courses">Courses</a></li>
     </ul>
   </nav>
 
@@ -104,10 +103,10 @@
     <h3>Professional Experience</h3>
     <ul>
       <li><strong>2025–Present:</strong> Assistant Professor, Instructional Design and Technology, University of North Dakota</li>
-      <li><strong>2023–2024:</strong> Postdoctoral Scholar, Curriculum and Instruction, Purdue University & Montana State University</li>
-      <li><strong>2022:</strong> Visiting Research Fellow, JYU Unit for Digital Learning, University of Jyväskylä, Finland</li>
-      <li><strong>2021–2022:</strong> Assistant Professor, Digital Learning, Dublin City University, Dublin, Ireland</li>
-      <li><strong>2018–2021:</strong> Graduate Research Assistant & Consultant, College of Education & College of Engineering, University of Georgia, GA</li>
+      <li><strong>2023–2024:</strong> Postdoctoral Scholar, Purdue University & Montana State University</li>
+      <li><strong>2022:</strong> Visiting Research Fellow, University of Jyväskylä, Finland</li>
+      <li><strong>2021–2022:</strong> Assistant Professor, Dublin City University, Dublin, Ireland</li>
+      <li><strong>2017–2021:</strong> Graduate Research Assistant & Consultant, College of Education & College of Engineering, University of Georgia, GA</li>
     </ul>
 
 
