--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
       <li><a href="#education">Education</a></li>
       <li><a href="#publications">Publications</a></li>
       <li><a href="#presentations">Presentations</a></li>
+      <li><a href="#awards">Awards</a></li>
+      <li><a href="#service">Professional Service</a></li>
+      <li><a href="#research">Research Interests</a></li>
       <li><a href="#grants">Grants</a></li>
     </ul>
   </nav>
@@ -149,16 +152,26 @@
     </ol>
   </section>
   
+  <section id="research">
+    <h2>Research Interests</h2>
+    <ul>
+      <li>Computer Science Education (in particular, AI and Robotics Education)</li>
+      <li>Engineering Education</li>
+      <li>Integrated STEM Education</li>
+      <li>Online Teacher Professional Learning in STEM</li>
+    </ul>
+  </section>
+
   <section id="grants">
     <h2>Grants</h2>
     <ul>
       <li>2025–2026, NIH SEPA: My Home, My Health — $1,246,090 (Sub-award)</li>
       <li>2025–2026, NSF DRK-12: Investigating how combining intensive professional development and modest support affects rural, elementary teachers’ science and engineering practice  — $2,955,381</li>
-      <li> 2022,University of Jyvaskyla Research Funding, Primary school teachers’ collaborative learning processes of programming - €9,000 </li>
+      <li> 2022, University of Jyvaskyla Research Funding, Primary school teachers’ collaborative learning processes of programming - €9,000 </li>
     </ul>
   </section>
 
-  <section>
+  <section id="awards">
     <h2>Awards</h2>
     <ul>
       <li>AERA Division K graduate student seminar award</li>
@@ -167,7 +180,7 @@
     </ul>
   </section>
 
-  <section>
+  <section id="service">
     <h2>Professional Service</h2>
     <ul>
       <li>NSF Review Panel Member</li>
