--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
     <ul id="tabs">
       <li><a href="#education">Education</a></li>
       <li><a href="#publications">Publications</a></li>
-      <li><a href="#presentations">Presentations</a></li>
       <li><a href="#awards">Awards</a></li>
       <li><a href="#service">Professional Service</a></li>
       <li><a href="#research">Research Interests</a></li>
@@ -184,7 +183,7 @@
     <h2>Professional Service</h2>
     <ul>
       <li>NSF Review Panel Member</li>
-      <li>Reviewer for: ACM TOCE, RER, AERJ, IJEMST, EJMSTE, JRTE, EIT, ISLS, SITE, AERA, ASEE, NARST, EARLI, and more.</li>
+      <li>Reviewer for: ACM Transactions on Computing Education, Review of Educational Research, American Educational Research Journal,International Journal of Education in Mathematics, Science, and Technology, and more.</li>
     </ul>
   </section>
 </body>
