--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <ul id="tabs">
       <li><a href="#education">Education</a></li>
       <li><a href="#publications">Publications</a></li>
-      <li><a href="#awards">Awards</a></li>
-      <li><a href="#service">Professional Service</a></li>
       <li><a href="#research">Research Interests</a></li>
       <li><a href="#grants">Grants</a></li>
+      <li><a href="#service">Professional Service</a></li>
+      <li><a href="#awards">Awards</a></li>
     </ul>
   </nav>
 
@@ -165,7 +165,7 @@
     <h2>Grants</h2>
     <ul>
       <li>2025–2026, NIH SEPA: My Home, My Health — $1,246,090 (Sub-award)</li>
-      <li>2025–2026, NSF DRK-12: Investigating how combining intensive professional development and modest support affects rural, elementary teachers’ science and engineering practice  — $2,955,381</li>
+      <li>2025–2026, NSF DRK-12: Investigating how combining intensive professional development and modest support affects rural, elementary teachers’ science and engineering practice (Project Staff)  — $2,955,381</li>
       <li> 2022, University of Jyvaskyla Research Funding, Primary school teachers’ collaborative learning processes of programming - €9,000 </li>
     </ul>
   </section>
