--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h3>Professional Experience</h3>
     <ul>
       <li><strong>2025–Present:</strong> Assistant Professor, Instructional Design and Technology, University of North Dakota</li>
-      <li><strong>2023–2024:</strong> Postdoctoral Scholar, Purdue University & Montana State University</li>
+      <li><strong>2023–2024:</strong> Postdoctoral Scholar, Purdue University (Jan-July 2023: Montana State University)</li>
       <li><strong>2022:</strong> Visiting Research Fellow, University of Jyväskylä, Finland</li>
       <li><strong>2021–2022:</strong> Assistant Professor, Dublin City University, Dublin, Ireland</li>
       <li><strong>2017–2021:</strong> Graduate Research Assistant & Consultant, College of Education & College of Engineering, University of Georgia, GA</li>
