--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1>Dr. Tugba Boz</h1>
   <p><strong>Assistant Professor, Instructional Design and Technology</strong><br>
   University of North Dakota<br>
-  📧 tugba.boz@und.edu<br>
+  <br><a href="mailto:tugba.boz@und.edu">tugba.boz@und.edu</a><br>
   </a></p>
 
 
